ende venda custom
